[tool.poetry]
name = "ups-script"
version = "0.1.0"
description = ""
authors = ["barryblueice <barryblueice@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ping3 = "^4.0.8"
poetry-dotenv-plugin = "^0.2.0"
loguru = "^0.7.2"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
